# smart-store-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  test_browser.py  test_excel_and_scraper.py
.claude/: settings.local.json
.github/workflows/: ci.yml  night_crawler.yml  release.yml
.streamlit/: config.toml
config/: __init__.py  logging_config.py  negative_keywords.json  settings.json  settings.py
data/: sample_keywords.csv  sample_products.json  sample_reviews.json
data/crawler/: candidates.json  keywords.json  night_crawl_log.txt  night_crawl_result.json
data/exports/: naver_bulk_20260125_102735.xlsx
database/: schema.sql
docs/: CONTINUE_v4.5.md  CURRENT_STATUS.md  GEMINI_COMPREHENSIVE_REVIEW_V3.6.2.md  GEMINI_CONSULTATION_2026-01-22.md  GEMINI_FEATURE_REVIEW_AUTO_PRICING.md  GEMINI_FINAL_REPORT_v3.5.1.md  GEMINI_GAP_ANALYSIS_V3.8.md  GEMINI_REPORT_2026-01-23.md  GEMINI_REPORT_PHASE3.md  GEMINI_REPORT_PHASE3_ALTERNATIVES.md  GEMINI_REPORT_PHASE3_STATUS.md  GEMINI_REPORT_v3.5.1_CODE.md  GEMINI_REPORT_v3.5.md  GEMINI_REPORT_v3.5_UPDATE.md  GEMINI_REVIEW_2026-01-23.md  GEMINI_REVIEW_PHASE_10_5.md  GEMINI_REVIEW_REQUEST_0123.md  GEMINI_REVIEW_V3.6.md  GEMINI_STRATEGY_REVIEW.md  GEMINI_V4_FEEDBACK.md  GEMINI_V4_REVIEW_REQUEST.md  IMMEDIATE_BUSINESS_PLAN.md  PHASE5_ROADMAP.md  PROJECT_ANALYSIS_FOR_GEMINI.md  ROADMAP.md  SESSION_SUMMARY_2026_01_24.md  USER_GUIDE.md  V4_DEVELOPMENT_REPORT.md  V4_NIGHT_CRAWLER_PLAN.md  apify_1688_report.md  v44_error_report.md
migrations/: 001_create_scrape_cache.sql
scripts/: run_night_crawler.py
sql/: supabase_schema.sql
src/: __init__.py  app.py  config.py  main.py
src/adapters/: __init__.py  alibaba_scraper.py
src/analyzers/: __init__.py  gemini_analyzer.py  keyword_filter.py  market_researcher.py  preflight_check.py  review_analyzer.py  spec_validator.py
src/api/: __init__.py  supabase_client.py
src/cli/: __init__.py  commands.py
src/core/: __init__.py  config.py  error_handler.py  (+2 more)
tests/: __init__.py  test_alibaba_scraper.py  test_cli.py  test_data_importer.py  test_detail_page_generator.py  test_events.py  test_exceptions.py  test_gap_reporter.py  test_gemini_analyzer.py  test_keyword_filter.py  test_landed_cost_calculator.py  test_margin_calculator.py  test_market_researcher.py  test_monitors.py  test_night_crawler.py  test_preflight_checker.py  test_price_tracker.py  test_scheduler.py  test_spec_validator.py  test_tissue_box_pipeline.py  test_validators.py
(+53 files in other folders)
